syntax = "proto2";

package tv.v1x1.common.dto.proto.messages;

import "Module.proto";
import "UUID.proto";

message Message {
    extensions 100 to max; /* Convention is to use the same 100 + your MessageType ID */

    enum MessageType {
        UNKNOWN = 0;
        EVENT = 1;
        REQUEST = 2;
        RESPONSE = 3;
        PUBSUB = 4;
    };

    message Context {
        required core.UUID context_id = 1;
        optional core.UUID trace_id = 2;
        optional int64 parent_span_id = 3;
        optional int64 span_id = 4;
        optional bool sampled = 5;
    }

    required MessageType type = 1;
    required core.Module from = 2;
    required core.UUID message_id = 3;
    required int64 timestamp = 4;
    optional Context context = 5;
}